// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> components/base/serviceOverview.tsx --- Snapshot +++ Should match snapshot 1`] = `
<div
  className="Connect-ServicesOverviewComponent--mar_top_100-1 Connect-ServicesOverviewComponent--mar_bot_50-3"
>
  <div
    className="MuiGrid-container-10"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-8-74 MuiGrid-grid-lg-8-88 MuiGrid-grid-xl-8-102"
    >
      <h1
        className="MuiTypography-root-107 MuiTypography-h1-119 MuiTypography-gutterBottom-134"
      >
        dashboard.main_header
      </h1>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-4-70 MuiGrid-grid-lg-4-84 MuiGrid-grid-xl-4-98 Connect-ServicesOverviewComponent--textToRight-6"
    >
      <div>
        <button
          className="MuiButtonBase-root-172 MuiButton-root-146 MuiButton-contained-157 MuiButton-raised-160 AltinnIconButton-dottedBtn-144"
          disabled={false}
          id="ceateService"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-147"
          >
            <i
              className="ai ai-circle-plus AltinnIconButton-dottedBtnIcon-145"
            />
            dashboard.new_service
          </span>
          <span
            className="MuiTouchRipple-root-230"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-gutterBottom-134 Connect-ServicesOverviewComponent--mar_top_50-2 Connect-ServicesOverviewComponent--textSyle-9"
  >
    dashboard.main_subheader
  </p>
  <div
    className="MuiGrid-container-10 Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-10-62 MuiGrid-grid-md-10-76 MuiGrid-grid-lg-12-92 MuiGrid-grid-xl-12-106"
    >
      <div
        className="MuiFormControl-root-187 AltinnSearchInput-searchBox-184 MuiFormControl-fullWidth-190"
      >
        <div
          className="MuiFormControl-root-187"
        >
          <div
            className="MuiInputBase-root-204 MuiInput-root-191 AltinnSearchInput-searchBoxInput-185 MuiInputBase-formControl-205 MuiInput-formControl-192 MuiInputBase-adornedStart-208"
            onClick={[Function]}
          >
            <div
              className="MuiInputAdornment-root-221 AltinnSearchInput-searchBoxIcon-186 MuiInputAdornment-positionEnd-224"
            >
              <i
                className="ai ai-search"
              />
            </div>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-214 MuiInput-input-199 MuiInputBase-inputAdornedStart-219"
              disabled={false}
              id="service-search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="dashboard.search_service"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-md-12-78 MuiGrid-grid-lg-10-90 MuiGrid-grid-xl-10-104"
    >
      <div
        className="MuiChip-root-240 MuiChip-colorPrimary-241 MuiChip-clickable-243 MuiChip-clickableColorPrimary-244 MuiChip-outlined-249 MuiChip-outlinedPrimary-250 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-237"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-259"
        >
          Mons Monsen
        </span>
      </div>
      <div
        className="MuiChip-root-240 MuiChip-colorPrimary-241 MuiChip-clickable-243 MuiChip-clickableColorPrimary-244 MuiChip-outlined-249 MuiChip-outlinedPrimary-250 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-237 AltinnFilterChip-chipActive-238"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-259"
        >
          This is the full name of this org
        </span>
      </div>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-226 CategoryComponent-width100-227 CategoryComponent-fontSize_16-229"
      >
        dashboard.category_service_write
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-227 CategoryComponent-mar_top_100-225 CategoryComponent-fontSize_24-228"
      >
        dashboard.no_category_service_write
      </p>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_100-1"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-226 CategoryComponent-width100-227 CategoryComponent-fontSize_16-229"
      >
        dashboard.category_service_read
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-227 CategoryComponent-mar_top_100-225 CategoryComponent-fontSize_24-228"
      >
        dashboard.no_category_service_read
      </p>
    </div>
  </div>
</div>
`;

exports[`>>> components/base/serviceOverview.tsx --- Snapshot +++ Should match snapshot when empty 1`] = `
<div
  className="Connect-ServicesOverviewComponent--mar_top_100-1 Connect-ServicesOverviewComponent--mar_bot_50-3"
>
  <div
    className="MuiGrid-container-10"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-8-74 MuiGrid-grid-lg-8-88 MuiGrid-grid-xl-8-102"
    >
      <h1
        className="MuiTypography-root-107 MuiTypography-h1-119 MuiTypography-gutterBottom-134"
      >
        dashboard.main_header
      </h1>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-4-70 MuiGrid-grid-lg-4-84 MuiGrid-grid-xl-4-98 Connect-ServicesOverviewComponent--textToRight-6"
    >
      <div>
        <button
          className="MuiButtonBase-root-172 MuiButton-root-146 MuiButton-contained-157 MuiButton-raised-160 AltinnIconButton-dottedBtn-144"
          disabled={false}
          id="ceateService"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-147"
          >
            <i
              className="ai ai-circle-plus AltinnIconButton-dottedBtnIcon-145"
            />
            dashboard.new_service
          </span>
          <span
            className="MuiTouchRipple-root-230"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-gutterBottom-134 Connect-ServicesOverviewComponent--mar_top_50-2 Connect-ServicesOverviewComponent--textSyle-9"
  >
    dashboard.main_subheader
  </p>
  <div
    className="MuiGrid-container-10 Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-10-62 MuiGrid-grid-md-10-76 MuiGrid-grid-lg-12-92 MuiGrid-grid-xl-12-106"
    >
      <div
        className="MuiFormControl-root-187 AltinnSearchInput-searchBox-184 MuiFormControl-fullWidth-190"
      >
        <div
          className="MuiFormControl-root-187"
        >
          <div
            className="MuiInputBase-root-204 MuiInput-root-191 AltinnSearchInput-searchBoxInput-185 MuiInputBase-formControl-205 MuiInput-formControl-192 MuiInputBase-adornedStart-208"
            onClick={[Function]}
          >
            <div
              className="MuiInputAdornment-root-221 AltinnSearchInput-searchBoxIcon-186 MuiInputAdornment-positionEnd-224"
            >
              <i
                className="ai ai-search"
              />
            </div>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-214 MuiInput-input-199 MuiInputBase-inputAdornedStart-219"
              disabled={false}
              id="service-search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="dashboard.search_service"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-md-12-78 MuiGrid-grid-lg-10-90 MuiGrid-grid-xl-10-104"
    >
      <div
        className="MuiChip-root-240 MuiChip-colorPrimary-241 MuiChip-clickable-243 MuiChip-clickableColorPrimary-244 MuiChip-outlined-249 MuiChip-outlinedPrimary-250 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-237"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-259"
        >
          Mons Monsen
        </span>
      </div>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-226 CategoryComponent-width100-227 CategoryComponent-fontSize_16-229"
      >
        dashboard.category_service_write
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-227 CategoryComponent-mar_top_100-225 CategoryComponent-fontSize_24-228"
      >
        dashboard.no_category_service_write
      </p>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_100-1"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-226 CategoryComponent-width100-227 CategoryComponent-fontSize_16-229"
      >
        dashboard.category_service_read
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-227 CategoryComponent-mar_top_100-225 CategoryComponent-fontSize_24-228"
      >
        dashboard.no_category_service_read
      </p>
    </div>
  </div>
</div>
`;
